--- a/todo app/src/styles/style.css
+++ b/todo app/src/styles/style.css
@@ -90,7 +90,7 @@ input[type="checkbox"]:checked + label{
     text-decoration: line-through;
     color:green;
 }
-.fa-solid{
+.fa-regular{
     background-color: white;
     color: rgb(156, 63, 63);
     position: fixed;
